logback to log errors (and tracing) in Resources/logs/debug.txt in prod - URGENT: need to test on MacOS when I get access to one