@@ -89,6 +89,7 @@ APP_NAME=PADDL
 --java-options --add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix \
 --java-options --add-exports=javafx.base/com.sun.javafx.event=com.jfoenix \
 --java-options --add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix \
+--java-options --add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix \
 --runtime-image target/java-runtime \
 --icon src/main/resources/com/wecca/canoeanalysis/images/canoe.icns \
 --app-version "$APP_VERSION" \
